--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
     "@next/mdx": "15.1.6",
+    "@tanstack/react-query": "^5.69.0",
     "@types/mdx": "^2.0.13",
     "@types/node": "^22.13.0",
     "@types/react": "19.0.8",
     "@types/react-dom": "19.0.3",
+    "@wagmi/core": "^2.16.7",
     "aos": "3.0.0-beta.6",
+    "connectkit": "^1.8.2",
     "date-fns": "^4.1.0",
     "next": "15.1.6",
     "next-mdx-remote": "^5.0.0",
@@ -25,7 +28,9 @@
     "react-dom": "19.0.0",
     "rehype-pretty-code": "^0.14.0",
     "swiper": "^8.4.7",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "viem": "^2.23.13",
+    "wagmi": "^2.14.15"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.10",
