--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
     "@next/mdx": "15.1.6",
+    "@solana/wallet-adapter-base": "^0.9.24",
+    "@solana/wallet-adapter-phantom": "^0.9.25",
+    "@solana/wallet-adapter-react": "^0.15.36",
+    "@solana/wallet-adapter-react-ui": "^0.9.36",
+    "@solana/web3.js": "^1.98.0",
     "@tanstack/react-query": "^5.69.0",
     "@types/mdx": "^2.0.13",
     "@types/node": "^22.13.0",
