New swagger docs

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/node": "^22.13.0",
     "@types/react": "19.0.8",
     "@types/react-dom": "19.0.3",
+    "@types/swagger-ui-react": "^5.18.0",
     "@wagmi/core": "^2.16.7",
     "aos": "3.0.0-beta.6",
     "connectkit": "^1.8.2",
@@ -33,6 +34,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "rehype-pretty-code": "^0.14.0",
+    "swagger-ui-react": "^5.20.7",
     "swiper": "^8.4.7",
     "typescript": "^5.7.3",
     "viem": "^2.23.13",
