--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
     "@next/mdx": "15.1.6",
+    "@solana-mobile/mobile-wallet-adapter-protocol": "2.1.5",
+    "@solana-mobile/mobile-wallet-adapter-protocol-web3js": "2.1.5",
     "@solana/wallet-adapter-base": "^0.9.24",
     "@solana/wallet-adapter-phantom": "^0.9.25",
     "@solana/wallet-adapter-react": "^0.15.36",
