--- a/package.json
+++ b/package.json
@@ -28,8 +28,11 @@
     "@types/react-dom": "19.0.3",
     "@types/swagger-ui-react": "^5.18.0",
     "@wagmi/core": "^2.16.7",
+    "@web3modal/ethers5": "^3.5.1",
+    "@web3modal/standalone": "^2.4.3",
     "aos": "3.0.0-beta.6",
     "date-fns": "^4.1.0",
+    "ethers": "^5.7.2",
     "next": "15.1.6",
     "next-mdx-remote": "^5.0.0",
     "react": "19.0.0",
